--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "pages:build": "npx @cloudflare/next-on-pages"
   },
   "dependencies": {
+    "@lottiefiles/dotlottie-react": "^0.14.4",
+    "@lottiefiles/react-lottie-player": "^3.6.0",
+    "lottie-web": "^5.13.0",
     "next": "15.4.3",
     "next-themes": "^0.4.6",
     "pg": "^8.16.3",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-lottie": "^1.2.10"
   },
   "devDependencies": {
     "@cloudflare/next-on-pages": "^1.13.13",
