--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lottie-web": "^5.13.0",
     "next": "15.4.3",
     "next-themes": "^0.4.6",
+    "party-js": "^2.2.0",
     "pg": "^8.16.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
